fix: wrap Product's titles

--- a/src/components/ProductGrid/ProductGrid.css
+++ b/src/components/ProductGrid/ProductGrid.css
@@ -11,6 +11,7 @@
 
 .product-card-content {
   padding: 16px;
+  width: 295px;
 }
 
 .product-title {
